# etorotrade

./: .coverage  .coverage.Mac.home.36077.XgXskbux  .coverage.Mac.home.37759.XNZmQUEx  .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .gitleaks.toml  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CIO_LEGACY_REVIEW_v13.md  CIO_SUCCESSOR_REVIEW.md  CI_CD.md  CLAUDE.md  CONTRIBUTING.md  DEPRECATED.md  Dockerfile  EG_PP_COLUMNS_FIX_SUMMARY.md  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  LICENSE  MAINTENANCE_PLAN.md  MIGRATION.md  MIGRATION_CONTEXT.md  MONITORING_IMPLEMENTATION.md  Makefile  OPTIMIZATION_PLAN.md  PERFORMANCE_ANALYSIS.md  PHASE1_SUMMARY.md  README.md  README_MIGRATION.md  REFACTORING.md  SECURITY.md  analyze_recommendation_changes.py  analyze_stricter_criteria.py  check_buy_csv.py  config.yaml  context.md  (+77 more)
.config/: Makefile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
benchmarks/: README.md  test_memory_leak.py  test_priority_limiter.py
config/: README.md  __init__.py  schema.py
debug/: test_async_optimization.py
debug_backup/: debug_msft.py  earnings_date_check.py  fix_a_column.py  test_a_column.py  test_fields.py  test_msft_ratings.py  test_trade2.py  trade2_display_fix.py  trade2_fix.py
docs/: CIO_REVIEW_v7_2026-03-17.md  CIO_V17_OPS.md  CIO_V36_OPS.md  CIO_V36_RESUME.md  CI_CD.md  CLAUDE.md  EVIDENCE_BASED_THRESHOLD_CHANGES.md  EXAMPLES.md  FAQ.md  FRAMEWORK_CRITIQUE.md  HEDGE_FUND_REVIEW.md  HEDGE_FUND_REVIEW_CRITIQUE.md  IMPROVEMENT_PLAN.md  IMPROVEMENT_PLAN_DETAILED.md  IMPROVEMENT_PLAN_V2.md  IMPROVEMENT_SUGGESTIONS.md  LARGE_MEGA_THRESHOLD_CHANGES.md  OPTIMIZATION_COMPLETE.md  PHASE_2_SUMMARY.md  POSITION_SIZING.md  PROJECT_COMPLETION.md  SIGNAL_FRAMEWORK_REVIEW.md  SIGNAL_FRAMEWORK_REVIEW_V2.md  TECHNICAL.md  TROUBLESHOOTING.md  USER_GUIDE.md  VECTORIZATION_IMPROVEMENTS.md  async_api.md  performance_tracking.md  ticker-normalization.md
examples/: async_api_example.py  enhanced_async_example.py  performance_example.py  v2_analyzer_example.py  v2_portfolio_example.py  v2_presentation_example.py  v2_provider_example.py
finprep/: README.md  buy_ratings.py  load_env.py  requirements.txt  row_format.py  test_api.py  track.py  weights.py
fmp/: README.md  api_urls.py  display.py  monthly.py
myvenv/: pyvenv.cfg
output/: cons.csv  index.html  market.csv  portfolio.csv  portfolio.html  screener.csv  tracker.csv
scripts/: BACKTEST_README.md  MONITORING_README.md  NEWS_README.md  PORTFOLIO_OPTIMIZER_README.md  README.md  TEST_FIXES_SUMMARY.md  analyze_compat_usage.py  analyze_framework.py  analyze_geography.py  analyze_industry.py  analyze_performance.py  backfill_action_prices.py  calibrate_modifiers_t30.py  census_edge_study.py  check_backtest_dates.py  check_dependencies.py  download_portfolio_data.py  event_risk_producer.py  fix_circuit_breaker_final.py  fix_circuit_breaker_tests.py  fix_tests.py  fix_ticker_formats.py  generate_skip_list.py  hidden_gems_analysis.py  lint.sh  market_snapshot.py  merge_shards.py  monitoring_examples.py  monitoring_examples_limited.py  news_analyst.py  optimize_criteria.py  organize_test_files.py  portfolio_manager_run.py  refresh_etoro_universe.py  refresh_price_cache.py  regime_overlay_replay.py  run_code_checks.py  run_enhanced_monitoring.py  run_monitoring.py  run_optimizer.py  (+38 more)
support/: api_request.py  api_urls.py  display.py  get_data.py  man_data.py  row_format.py
testenv/: pyvenv.cfg
tests/: COMPAT_REMOVAL_GUIDE.md  FINAL_COMPAT_REMOVAL.md  MIGRATION_STATUS.md  README.md  REMOVAL_PR_MESSAGE.md  TEST_MIGRATION_PLAN.md  __init__.py  conftest.py  migrate_tests.py  test_advanced_utils.py  test_analyst.py  test_async.py  test_async_providers.py  test_cache.py  test_cache_behavioral_compatibility.py  test_client.py  test_compatibility.py  test_cons.py  test_display.py  test_download.py  test_earnings.py  test_econ.py  test_economics.py  test_error_handling.py  test_errors.py  test_field_cache_compatibility.py  test_format_utils.py  test_formatting.py  test_holders.py  test_improvements.py  test_index.py  test_insiders.py  test_market_display.py  test_market_display_batch.py  test_market_display_html.py  test_market_display_unified.py  test_metrics.py  test_migration.py  test_monthly.py  test_news.py  (+18 more)
tools/: README.md  cleanup.sh  corrected_allocation.py  current_allocation_details.py  current_value_allocation.py  download_portfolio_data.py  fix_ticker_formats.py  lint.sh  optimize_criteria.py  performance_benchmark.py  portfolio_analysis.py  portfolio_insights.py  run_enhanced_monitoring.py  run_monitoring.py  sample_parameters.json  sample_parameters_simple.json  test_optimize.py  true_geographical_allocation.py  true_portfolio_allocation.py  working_params.json
trade_modules/: __init__.py  ab_testing.py  agent_sign_calibrator.py  analysis_engine.py  analysis_service.py  backtest_engine.py  backtest_stats.py  baseline_strategies.py  bayesian_conviction.py  cache_service.py  census_time_series.py  cli.py  cluster_monitor.py  committee_backtester.py  committee_html.py  committee_qa.py  committee_scorecard.py  committee_synthesis.py  concentration_analyzer.py  config_adapters.py  config_interfaces.py  config_manager.py  constants.py  container.py  conviction_cells.py  conviction_sizer.py  conviction_thresholds.py  data_freshness.py  data_processing_service.py  data_processor.py  debate_scorecard.py  display_manager.py  earnings_proximity.py  empirical_factor.py  errors.py  factor_attribution.py  filter_service.py  fx_hedge_monitor.py  fx_sizing.py  improvement_analyzer.py  (+40 more)
utilities/: monthly.py  scrape.py  weekly.py
yahoofinance/: __init__.py  _metrics.py  analyst.py  cache.py  client.py  config.py  cons.py  debug.py  debug_holders.py  di_container.py  display.py  download.py  earnings.py  econ.py  economics.py  errors.py  example.py  formatting.py  holders.py  index.py  insiders.py  logging_config.py  metrics.py  monthly.py  news.py  portfolio.py  pricing.py  (+6 more)
yahoofinance.old/: README.md  cache.py  news.py  portfolio.py  pricing.py  validate.py
(+1094 files in other folders)
