[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etorotrade"
version = "2.0.0"
description = "Market analysis and portfolio management tool using Yahoo Finance data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "plessas"},
]
keywords = ["finance", "trading", "stock market", "portfolio management", "yahoo finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=2.0.3,<3.0.0",
    "numpy>=1.20.0,<3.0.0",
    "matplotlib>=3.4.0,<4.0.0",
    "yfinance>=0.2.12,<2.0.0",
    "yahooquery>=2.3.7",
    "requests>=2.25.0,<3.0.0",
    "scipy>=1.10.0",
    "tabulate>=0.8.9",
    "tqdm>=4.60.0",
    "colorama>=0.4.4",
    "python-dateutil>=2.8.0",
    "pytz>=2021.1",
    "aiohttp>=3.8.0",
    "aiofiles>=23.1.0",
    "selenium>=4.1.0",
    "python-dotenv>=0.19.0",
    "certifi>=2023.7.22",
    "psutil>=5.9.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=2.12.0",
    "pytest-asyncio>=0.18.0",
    "mypy>=0.910",
    "types-requests>=2.25.0",
    "types-setuptools>=80.7.0",
    "types-PyYAML>=6.0.0",
    "types-tabulate>=0.9.0",
    "black>=22.3.0",
    "isort>=5.9.0",
    "flake8>=3.9.0",
]

[project.scripts]
etorotrade = "trade:main"

[project.urls]
Homepage = "https://github.com/weirdapps/etorotrade"
"Bug Reports" = "https://github.com/weirdapps/etorotrade/issues"
Source = "https://github.com/weirdapps/etorotrade"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external API access",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
lines_after_imports = 2
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
strict_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
# Lenient configuration - mypy runs but doesn't block CI
# Strict checks can be enabled incrementally per module

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
