[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "etorotrade"
version = "2.0.0"
description = "Market analysis and portfolio management tool using Yahoo Finance data"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "plessas"},
]
keywords = ["finance", "trading", "stock market", "portfolio management", "yahoo finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "pandas>=2.0.3,<3.0.0",
    "numpy>=2.2.6,<3.0.0",
    "matplotlib>=3.4.0,<4.0.0",
    "yfinance==1.3.0",
    "lxml>=5.0.0",  # required by yfinance.Ticker.earnings_dates (undeclared upstream dep)
    "yahooquery>=2.3.7",
    "requests>=2.25.0,<3.0.0",
    "scipy>=1.10.0",
    "pyarrow>=14.0.0",
    "tabulate>=0.8.9",
    "tqdm>=4.60.0",
    "colorama>=0.4.4",
    "python-dateutil>=2.8.0",
    "pytz>=2021.1",
    "aiohttp>=3.8.0",
    "aiofiles>=25.1.0",
    "selenium>=4.1.0",
    "python-dotenv>=1.2.2",
    "certifi>=2023.7.22",
    "psutil>=5.9.0",
    "pyyaml>=6.0.3",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
ml = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "scikit-learn>=1.3.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=2.12.0",
    "pytest-asyncio>=1.3.0",
    "mypy>=0.910",
    "types-requests>=2.25.0",
    "types-setuptools>=80.7.0",
    "types-PyYAML>=6.0.0",
    "types-tabulate>=0.9.0",
    "black>=22.3.0",
    "isort>=5.9.0",
    "flake8>=3.9.0",
]

[project.scripts]
etorotrade = "trade:main"

[project.urls]
Homepage = "https://github.com/weirdapps/etorotrade"
"Bug Reports" = "https://github.com/weirdapps/etorotrade/issues"
Source = "https://github.com/weirdapps/etorotrade"

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=xml",  # For SonarCloud
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external API access",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
lines_after_imports = 2
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = false
strict_optional = false
warn_redundant_casts = false
warn_unused_ignores = false
# Lenient configuration - mypy runs but doesn't block CI
# Strict checks can be enabled incrementally per module

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Sync/async dual-path provider methods produce union types (dict | Coroutine)
# that mypy can't disambiguate. The runtime branch is selected via is_async
# checks. Existing # type: ignore comments are stale across mypy versions;
# park these two modules until a focused PR refactors the dual-path API.
[[tool.mypy.overrides]]
module = ["yahoofinance.analysis.stock", "yahoofinance.api.providers.async_yahoo_finance"]
ignore_errors = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "B904",  # raise from in except — codebase-wide pattern (~48 sites), focused PR planned
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports OK in __init__.py
"tests/**/*.py" = ["B", "E"]  # relax rules for tests
